environments/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-api
  namespace: express-api
spec:
  replicas: 2

  selector:
    matchLabels:
      app: express-api

  template:
    metadata:
      labels:
        app: express-api

    spec:
      containers:
        - name: express-api
          image: zohaibpro/express-api:latest

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
