environments/production/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-api-service
  namespace: express-api
spec:
  selector:
    app: express-api

  ports:
    - port: 80
      targetPort: 3000

  type: ClusterIP
